--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,10 +12,10 @@ jobs:
       - name: Setup Checkout
         uses: actions/checkout@v3
       - name: Login
-        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login ${{ secrets.DOCKER_REGISTRY }} -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+        run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Build
         run: docker build -t disguard .
       - name: Tag
-        run: docker tag disguard ${{ secrets.DOCKER_REGISTRY }}/disguard
+        run: docker tag disguard ghcr.io/disguard
       - name: Push
-        run: docker push ${{ secrets.DOCKER_REGISTRY }}/disguard
+        run: docker push ghcr.io/disguard
