--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "start": "npx prisma migrate dev && node .",
+    "start": "npx prisma migrate deploy && node .",
     "build": "tsc",
     "dev": "nodemon src/index.ts"
   },
